add workflow test

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,7 +13,8 @@ on:
           - prod
 
 jobs:
-  Something:
+  deploy:
+    name: "Deploy to Dev"
     runs-on: ubuntu-latest
     steps:
       - run: echo "We did thing!"
