--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Push Docker Image
         run: |
-          echo "Pushing Docker image to registry... to ${{ github.event.inputs.tag }}"
+          echo "Pushing Docker image to registry... to ${{ github.ref_name }}"
           # docker push my-image:${{ github.sha }}
           echo "Docker image pushed successfully."
 
